--- a/om-os.html
+++ b/om-os.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 
 <head>
   <meta charset="utf-8">
@@ -54,5 +54,8 @@
         dataFill.appendChild(klon);
       });
     }
+
   </script>
-</body></html>
+</body>
+
+</html>
