--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
 
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,7 @@
     img {
       width: 100%;
     }
+
   </style>
 </head>
 
@@ -25,7 +26,7 @@
   <template>
     <h2></h2>
     <p></p>
-    <img src="" alt="">
+    <img>
     <p class="ret_type"></p>
     <p class="pris"></p>
     <p class="oprindelse"></p>
@@ -68,5 +69,8 @@
         dataFill.appendChild(klon);
       });
     }
+
   </script>
-</body></html>
+</body>
+
+</html>
